# lynx-fundamental

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  README.md  lynx-fundamental.py  pyproject.toml
.github/: PUBLISHING.md
docs/: API.md
lynx/: __init__.py  __main__.py  cli.py  display.py  easter.py  interactive.py  models.py  plugin.py
lynx/core/: analyzer.py  conclusion.py  fetcher.py  news.py  reports.py  storage.py  ticker.py
lynx/export/: __init__.py  html_export.py  pdf_export.py  txt_export.py
lynx/gui/: app.py
lynx/metrics/: calculator.py  explanations.py  relevance.py  sector_insights.py
lynx/tui/: app.py  themes.py
robot/: api_tests.robot  cli_tests.robot  export_helper.py  export_tests.robot
robot/output/: log.html  output.xml  report.html
tests/: test_about.py  test_calculator.py  test_cli.py  test_conclusion.py  test_display.py  test_explanations.py  test_export.py  test_gui.py  test_models.py  test_progressive.py  test_relevance.py  test_storage.py  test_ticker.py  test_tui.py
