[project]
name = "lynx-fa"
version = "0.2.0"
description = "Lynx Fundamental Analysis — Value investing research tool with moat analysis"
license = {text = "BSD-3-Clause"}
authors = [{name = "Borja Tarraso", email = "borja.tarraso@member.fsf.org"}]
requires-python = ">=3.10"
dependencies = [
    "yfinance>=0.2.40",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "rich>=13.7",
    "textual>=0.50",
    "feedparser>=6.0",
    "pandas>=2.1",
    "numpy>=1.26",
]

[project.scripts]
lynx-fa = "lynx.__main__:main"

[tool.setuptools.packages.find]
include = ["lynx*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
